--- a/style.css
+++ b/style.css
@@ -3,3 +3,45 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    font-family: arial, helvetica,sans-serif;
+    text-align: center;
+    background: white;
+    margin: 0;
+    padding: 20px;
+    background-image: url('./rick-and-morty-toilets-hd-wallpaper-preview.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+
+}
+h1{
+    margin-bottom: 20px;
+    text-shadow: 0 2px 8px black;
+    font-size: 4rem;
+
+}
+.search-box{
+    margin-bottom: 20px;
+}
+#pageInput{
+    padding: 10px;
+    width: 200px;
+    border-radius: 0 2px 8px black;
+
+}
+#searchbtn{
+    padding: 10px 15px ;
+    margin-left:5px ;
+    border: none;
+    border-radius: 8px;
+    background-color: aqua;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+}
+#searchbtn:hover{
+    background-color: aqua;
+    box-shadow: 0 2px 8px black;
+}
