--- a/style.css
+++ b/style.css
@@ -45,3 +45,65 @@ h1{
     background-color: aqua;
     box-shadow: 0 2px 8px black;
 }
+
+.results{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 15px;
+
+}
+
+.card{
+    background: #000000c5;
+    border-radius: 10px;
+    padding: 10px;
+    width: 200px;
+    text-align: center;
+    color: #fff;
+    transition: all 200ms ease-in-out;
+    box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
+}
+
+.card img{
+    width: 100%;
+    border-radius: 100%;
+    transition: all 200ms ease-in-out;
+
+}
+.card:hover{
+    box-shadow: rgba(56, 240, 46, 0.4) -5px 5px, rgba(46, 240, 53, 0.3) -10px 10px, rgba(46, 240, 69, 0.2) -15px 15px, rgba(46, 240, 85, 0.1) -20px 20px, rgba(26, 255, 0, 0.05) -25px 25px;
+}
+.card:hover h3{
+    color: green;
+    text-shadow: 0 2px 8px green;
+}
+.card:hover img{
+    border-radius: 10px;
+
+}
+.card h3{
+    margin: 10px 0 5px;
+    font-size: 22px;
+    color: #fff;
+    font-weight: bolder;
+    letter-spacing: 3px;
+}
+.card p{
+    color: #dddddd;
+
+}
+.card strong{
+    color: green;
+    font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
+[
